# cookiecutter-templates

pypi-module-full-test-coverage/: .travis.yml  cookiecutter.json
pypi-module-full-test-coverage/{{cookiecutter.app_name}}/: LICENSE  Makefile  README.rst  setup.cfg  setup.py
pypi-module-full-test-coverage/{{cookiecutter.app_name}}/docs/source/: api.rst  conf.py  index.rst  tutorial.rst
pypi-module-full-test-coverage/{{cookiecutter.app_name}}/tests/: __init__.py
pypi-module-full-test-coverage/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: __init__.py
