[nosetests]
verbosity=2
with-coverage=1
cover-inclusive=1
cover-package={{cookiecutter.app_name}}.models,{{cookiecutter.app_name}}.orm,{{cookiecutter.app_name}}.managers,{{cookiecutter.app_name}}.exceptions
cover-erase=1
nocapture=1
nologcapture=1
stop=1

[bdist_wheel]
universal=1

[metadata]
description-file=README.rst